--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ faiss-cpu = "^1.9.0"
 ipykernel = "^6.29.5"
 langchainhub = "^0.1.21"
 beautifulsoup4 = "^4.12.3"
+langserve = "^0.3.0"
+sse-starlette = "^2.1.3"
 
 
 [build-system]
